--- a/gallery.html
+++ b/gallery.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="wide wow-animation" lang="en">
   <head>
     <!-- Site Title-->
-    <title>Home</title>
+    <title>High Code - Gallery</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,13 +14,16 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mdi.css">
     <link rel="stylesheet" href="css/fl-bigmug-line.css">
+		<!--[if lt IE 10]>
+    <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
+    <script src="js/html5shiv.min.js"></script>
+		<![endif]--> 
   </head>
-
   <body>
     <!-- Page-->
     <div class="page">
-      <!-- Page Header-->
-      <header class="section page-header breadcrumbs-custom-wrap bg-gradient bg-secondary-2">
+        <!-- Page Header-->
+        <header class="section page-header breadcrumbs-custom-wrap bg-gradient bg-secondary-2">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap rd-navbar-default">
           <nav class="rd-navbar" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fullwidth" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-static" data-md-stick-up-offset="2px" data-lg-stick-up-offset="2px" data-stick-up="true" data-sm-stick-up="true" data-md-stick-up="true" data-lg-stick-up="true">
@@ -36,9 +39,9 @@
                 <div class="rd-navbar-nav-wrap">
                   <!-- RD Navbar Nav-->
                   <ul class="rd-navbar-nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">Experience</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li class="active"><a href="#">Gallery</a></li>
                     <li><a href="#">Editions</a></li>
                   </ul>
                 </div>
@@ -47,58 +50,118 @@
           </nav>
         </div>
         <!-- Breadcrumbs-->
-        <section class="breadcrumbs-custom breadcrumbs-custom-lg breadcrumbs-custom-svg">
-          <div class="shell">
-            <img src="./images/highcodelogo.png">
-            <div class="shell shell-wide">
-            <div class="range range-xs-center range-md">
-                <div class="cell-md-10 cell-lg-9 cell-xl-7 cell-xxl-6"> 
-                    <a class="button button-lg button-secondary button-nina button-video" href="//www.youtube.com/watch?v=iYsTvn1bHfU" data-lightbox="iframe">Ver video</a>
-                </div>
-            </div>
-            </div>
-          </div>
-          <div class="parallax-scene-js parallax-scene" data-scalar-x="5" data-scalar-y="10"></div>
-        </section>
       </header>
 
-      <!-- Template layouts-->
-      <section class="section-md bg-white">
-        <div class="shell text-center">
-            <h3 class="text-gray-4">las marcas que modelan</h3>
-        </div>
-        <div class="shell shell-wide">
-            <div class="owl-carousel owl-dots-secondary owl-layout-4" data-items="4" data-xs-items="2" data-sm-items="3" data-md-items="4" data-dots="false" data-nav="false" data-stage-padding="0" data-loop="false" data-margin="30" data-mouse-drag="false" data-dots-each="0">
-                <a class="link-image" href="#"><img src="images/logo-image-1-174x113.png" alt="" width="174" height="113"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-2-173x135.png" alt="" width="173" height="135"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-3-172x113.png" alt="" width="172" height="113"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-4-185x110.png" alt="" width="185" height="110"/></a>
-            </div>
-            <div class="owl-carousel owl-dots-secondary owl-layout-4" data-items="4" data-xs-items="2" data-sm-items="3" data-md-items="4" data-dots="false" data-nav="false" data-stage-padding="0" data-loop="false" data-margin="30" data-mouse-drag="false" data-dots-each="0">
-                <a class="link-image" href="#"><img src="images/logo-image-1-174x113.png" alt="" width="174" height="113"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-2-173x135.png" alt="" width="173" height="135"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-3-172x113.png" alt="" width="172" height="113"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-4-185x110.png" alt="" width="185" height="110"/></a>
-            </div>
-        </div>
-        </section>
-
-      <!-- What you get with Brave theme-->
-
-      <!-- Build Your Site In-Browser with NOVI Builder-->
-        <section class="section-md bg-white">
-            <div class="shell text-center">
-                <h3 class="text-gray-4">patrocinadores</h3>
-            </div>
-            <div class="shell shell-wide">
-                <div class="owl-carousel owl-dots-secondary owl-layout-4" data-items="4" data-xs-items="2" data-sm-items="3" data-md-items="4" data-dots="true" data-nav="false" data-stage-padding="0" data-loop="true" data-margin="30" data-mouse-drag="true" data-dots-each="3">
-                    <a class="link-image" href="#"><img src="images/logo-image-1-174x113.png" alt="" width="174" height="113"/></a>
-                    <a class="link-image" href="#"><img src="images/logo-image-2-173x135.png" alt="" width="173" height="135"/></a>
-                    <a class="link-image" href="#"><img src="images/logo-image-3-172x113.png" alt="" width="172" height="113"/></a>
-                    <a class="link-image" href="#"><img src="images/logo-image-4-185x110.png" alt="" width="185" height="110"/></a>
+      <!-- Horizontal button tabs-->
+      <section class="section section-lg bg-white text-center">
+        <div><!--Prev: <div class="shell">-->
+          <h3>Campañas</h3>
+          <div class="range range-50 range-sm-center">
+            <div class="cell-sm-9 cell-md-8 cell-lg-12"> 
+              <div class="tabs-custom tabs-horizontal tabs-buttons" id="tabs-2">
+                <!-- Nav tabs-->
+                <ul class="nav nav-tabs text-center">
+                  <li class="active"><a class="button-nina" href="#tabs-4-1" data-toggle="tab">Fotos</a></li>
+                  <li><a class="button-nina" href="#tabs-4-2" data-toggle="tab">Videos</a></li>
+                </ul>
+                <!-- Tab panes-->
+                <div class="tab-content">
+                  <div class="tab-pane fade in active" id="tabs-4-1">
+                    <!-- cobbles gallery-->
+                    <section class="section section-lg text-center bg-white">
+                        <div class="isotope-wrap range range-50">
+                          <!-- Isotope Content-->
+                          <div class="cell-lg-12">
+                            <div class="isotope" data-isotope-layout="fitRows" data-isotope-group="gallery-03" data-lightgallery="group">
+                              <div class="row row-condensed row-no-gutter">
+                                <div class="col-xs-12 col-sm-6 col-md-7 isotope-item" data-filter="type 1"><a class="gallery-item gallery-item-fullwidth" href="images/gallery-01-original.jpg" data-lightgallery="group-item">
+                                    <div class="gallery-item-image">
+                                      <figure><img src="images/gallery-cobbles-01-1120x650.jpg" alt="" width="1120" height="650"/>
+                                      </figure>
+                                      <div class="caption">
+                                        <p class="caption-title">photo #1</p>
+                                        <p class="caption-text">Brave offers you a variety of useful features based on Bootstrap framework.</p>
+                                      </div>
+                                    </div></a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-5 isotope-item" data-filter="type 1"><a class="gallery-item gallery-item-fullwidth" href="images/gallery-03-original.jpg" data-lightgallery="group-item">
+                                    <div class="gallery-item-image">
+                                      <figure><img src="images/gallery-cobbles-02-800x650.jpg" alt="" width="800" height="650"/>
+                                      </figure>
+                                      <div class="caption">
+                                        <p class="caption-title">photo #2</p>
+                                        <p class="caption-text">Brave offers you a variety of useful features based on Bootstrap framework.</p>
+                                      </div>
+                                    </div></a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-5 isotope-item" data-filter="type 1"><a class="gallery-item gallery-item-fullwidth" href="images/gallery-02-original.jpg" data-lightgallery="group-item">
+                                    <div class="gallery-item-image">
+                                      <figure><img src="images/gallery-cobbles-03-800x650.jpg" alt="" width="800" height="650"/>
+                                      </figure>
+                                      <div class="caption">
+                                        <p class="caption-title">photo #3</p>
+                                        <p class="caption-text">Brave offers you a variety of useful features based on Bootstrap framework.</p>
+                                      </div>
+                                    </div></a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-7 isotope-item" data-filter="type 2"><a class="gallery-item gallery-item-fullwidth" href="images/gallery-06-original.jpg" data-lightgallery="group-item">
+                                    <div class="gallery-item-image">
+                                      <figure><img src="images/gallery-cobbles-04-1120x650.jpg" alt="" width="1120" height="650"/>
+                                      </figure>
+                                      <div class="caption">
+                                        <p class="caption-title">photo #4</p>
+                                        <p class="caption-text">Brave offers you a variety of useful features based on Bootstrap framework.</p>
+                                      </div>
+                                    </div></a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </section>
+  
+                  </div>
+                  <div class="tab-pane fade" id="tabs-4-2">
+                    <!-- video gallery-->
+                    <section class="section section-lg text-center bg-white">
+                      <div class="shell-wide">
+                        <div class="isotope-wrap range range-0 range-sm-30">
+                          <div class="cell-lg-12">
+                            <div class="isotope" data-isotope-layout="fitRows" data-isotope-group="gallery" data-lightgallery="group">
+                              <div class="row">
+                                <div class="col-xs-12 col-sm-6">
+                                  <figure class="image-default image-video"><img src="images/gallery-video-01-870x490.jpg" alt="" width="870" height="490"/><a class="link-video" href="//www.youtube.com/embed/iYsTvn1bHfU" data-lightgallery="group-item"></a>
+                                  </figure>
+                                </div>
+                                <div class="col-xs-12 col-sm-6">
+                                  <figure class="image-default image-video"><img src="images/gallery-video-02-870x490.jpg" alt="" width="870" height="490"/><a class="link-video" href="//www.youtube.com/embed/iYsTvn1bHfU" data-lightgallery="group-item"></a>
+                                  </figure>
+                                </div>
+                                <div class="col-xs-12 col-sm-6">
+                                  <figure class="image-default image-video"><img src="images/gallery-video-03-870x490.jpg" alt="" width="870" height="490"/><a class="link-video" href="//www.youtube.com/embed/iYsTvn1bHfU" data-lightgallery="group-item"></a>
+                                  </figure>
+                                </div>
+                                <div class="col-xs-12 col-sm-6">
+                                  <figure class="image-default image-video"><img src="images/gallery-video-04-870x490.jpg" alt="" width="870" height="490"/><a class="link-video" href="//www.youtube.com/embed/iYsTvn1bHfU" data-lightgallery="group-item"></a>
+                                  </figure>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </section>
+                  </div>
                 </div>
+              </div>
             </div>
-        </section>
+          </div>
+        </div>
+      </section>
+
+      
+
+      
 
       <!-- Page Footer-->
       <footer class="section page-footer page-footer-alternative bg-gray-darker">
@@ -195,7 +258,7 @@
               </div>
             </div>
             <div class="cell-sm-6 cell-lg-3">
-              <h6>Contacto</h6>
+              <h6>Contact US</h6>
               <ul class="list-xs list-darker">
                 <li class="box-inline"><span class="icon icon-md-smaller icon-primary mdi mdi-map-marker"></span>
                   <div><a href="#">2130 Fulton Street, Chicago,<br class="veil reveal-xl-block"/>&nbsp;
