--- a/gallery.html
+++ b/gallery.html
@@ -39,9 +39,9 @@
                 <div class="rd-navbar-nav-wrap">
                   <!-- RD Navbar Nav-->
                   <ul class="rd-navbar-nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Experience</a></li>
-                    <li class="active"><a href="#">Gallery</a></li>
+                    <li><a href="main.html">Home</a></li>
+                    <li><a href="experience.html">Experience</a></li>
+                    <li class="active"><a href="gallery.html">Gallery</a></li>
                     <li><a href="#">Editions</a></li>
                   </ul>
                 </div>
