--- a/main.html
+++ b/main.html
@@ -9,19 +9,19 @@
     <meta charset="utf-8">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald:200,400%7CLato:300,400,300italic,700%7CMontserrat:900">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700,800" rel="stylesheet"> 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mdi.css">
     <link rel="stylesheet" href="css/fl-bigmug-line.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" crossorigin="anonymous">
   </head>
 
   <body>
     <!-- Page-->
     <div class="page">
       <!-- Page Header-->
-      <header class="section page-header breadcrumbs-custom-wrap bg-gradient bg-secondary-2">
-        <!-- RD Navbar-->
+      <header class="section page-header bg-gray-darker breadcrumbs-custom-wrap">
         <div class="rd-navbar-wrap rd-navbar-default">
           <nav class="rd-navbar" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fullwidth" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-static" data-md-stick-up-offset="2px" data-lg-stick-up-offset="2px" data-stick-up="true" data-sm-stick-up="true" data-md-stick-up="true" data-lg-stick-up="true">
             <div class="rd-navbar-inner">
@@ -30,15 +30,15 @@
                 <!-- RD Navbar Toggle-->
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                 <!-- RD Navbar Brand-->
-                <div class="rd-navbar-brand"><a class="brand-name" href="index.html"><img class="logo-default" src="images/highcodelogo.png" alt="" width="128" height="52"/><img class="logo-inverse" src="images/highcodelogo.png" alt="" width="128" height="52"/></a></div>
+                <div class="rd-navbar-brand rd-navbar-fixed" data-layout="rd-navbar-fixed"><a class="brand-name" href="index.html"><img class="logo-default" src="images/highcodelogo.png" alt="" width="128" height="52"/><img class="logo-inverse" src="images/highcodelogo.png" alt="" width="128" height="52"/></a></div>
               </div>
               <div class="rd-navbar-aside-right">
                 <div class="rd-navbar-nav-wrap">
                   <!-- RD Navbar Nav-->
                   <ul class="rd-navbar-nav">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="#">Experience</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="main.html">Home</a></li>
+                    <li class="active"><a href="experience.html">Experience</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="#">Editions</a></li>
                   </ul>
                 </div>
@@ -46,66 +46,109 @@
             </div>
           </nav>
         </div>
-        <!-- Breadcrumbs-->
-        <section class="breadcrumbs-custom breadcrumbs-custom-lg breadcrumbs-custom-svg">
-          <div class="shell">
-            <img src="./images/highcodelogo.png">
-            <div class="shell shell-wide">
-            <div class="range range-xs-center range-md">
-                <div class="cell-md-10 cell-lg-9 cell-xl-7 cell-xxl-6"> 
-                    <a class="button button-lg button-secondary button-nina button-video" href="//www.youtube.com/watch?v=iYsTvn1bHfU" data-lightbox="iframe">Ver video</a>
+      </header>
+      <section class="section">
+        <!-- Welcome To-->
+        <div class="swiper-container swiper-slider swiper-modern" data-loop="true" data-autoplay="false" data-simulate-touch="false" data-pauseOnFocus="true">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide" data-slide-bg="images/HC-carrete1.jpg">
+              <div class="swiper-slide-caption">
+                <div class="section-lg context-dark text-center">
+                  <div class="shell shell-wide">
+                    <div class="range range-xs-center">
+                      <div class="cell-xl-10">
+                        <img src="images/highcodelogo.png" style="width: 60%;">
+                      </div>
+                    </div>
+                  </div>
                 </div>
+              </div>
             </div>
+            <div class="swiper-slide" data-slide-bg="images/HC-carrete2.jpg">
+              <div class="swiper-slide-caption">
+                <div class="section-lg context-dark text-center">
+                  <div class="shell shell-wide">
+                    <div class="range range-xs-center">
+                      <div class="cell-xl-8">
+                        <img src="images/highcodelogo.png" style="width: 60%;">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide" data-slide-bg="images/museum-slider-slide-03-1920x860.jpg">
+              <div class="swiper-slide-caption">
+                <div class="section-lg context-dark text-center">
+                  <div class="shell shell-wide">
+                    <div class="range range-xs-center">
+                      <div class="cell-xl-10">
+                        <img src="images/highcodelogo.png" style="width: 60%;">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="parallax-scene-js parallax-scene" data-scalar-x="5" data-scalar-y="10"></div>
-        </section>
+          <!-- Swiper controls-->
+          <div class="swiper-pagination-wrap">
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
       </header>
 
       <!-- Template layouts-->
-      <section class="section-md bg-white">
-        <div class="shell text-center">
-            <h3 class="text-gray-4">las marcas que modelan</h3>
+      <section class="section-md bg-black">
+        <div class="shell-fluid text-center">
+          <div class="container-for">
+            <img src="images/raya-morada.png">
+            <h3 class="text-gray-4 subtitle centered">marcas que han desfilado</h3>
+          </div>
+            <br><br>
+            <img src="images/Logos-hc-marcas.png">
         </div>
-        <div class="shell shell-wide">
-            <div class="owl-carousel owl-dots-secondary owl-layout-4" data-items="4" data-xs-items="2" data-sm-items="3" data-md-items="4" data-dots="false" data-nav="false" data-stage-padding="0" data-loop="false" data-margin="30" data-mouse-drag="false" data-dots-each="0">
-                <a class="link-image" href="#"><img src="images/logo-image-1-174x113.png" alt="" width="174" height="113"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-2-173x135.png" alt="" width="173" height="135"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-3-172x113.png" alt="" width="172" height="113"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-4-185x110.png" alt="" width="185" height="110"/></a>
-            </div>
-            <div class="owl-carousel owl-dots-secondary owl-layout-4" data-items="4" data-xs-items="2" data-sm-items="3" data-md-items="4" data-dots="false" data-nav="false" data-stage-padding="0" data-loop="false" data-margin="30" data-mouse-drag="false" data-dots-each="0">
-                <a class="link-image" href="#"><img src="images/logo-image-1-174x113.png" alt="" width="174" height="113"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-2-173x135.png" alt="" width="173" height="135"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-3-172x113.png" alt="" width="172" height="113"/></a>
-                <a class="link-image" href="#"><img src="images/logo-image-4-185x110.png" alt="" width="185" height="110"/></a>
-            </div>
-        </div>
+        
         </section>
 
-      <!-- What you get with Brave theme-->
+      <section class="section-xl bg-black">
+          <div class="parallax-container">
+              <div class="material-parallax"><img src="images/rayas-hc.png" alt=""></div>
+              <div class="parallax-content context-dark section-xxl text-center">
+                <img src="images/fecha-lugar-hc.png" style="width:23%;">
+              </div>
+            </div>
+      </section>
 
       <!-- Build Your Site In-Browser with NOVI Builder-->
         <section class="section-md bg-white">
             <div class="shell text-center">
-                <h3 class="text-gray-4">patrocinadores</h3>
+              <h3>Patrocinadores</h3>
             </div>
+
             <div class="shell shell-wide">
-                <div class="owl-carousel owl-dots-secondary owl-layout-4" data-items="4" data-xs-items="2" data-sm-items="3" data-md-items="4" data-dots="true" data-nav="false" data-stage-padding="0" data-loop="true" data-margin="30" data-mouse-drag="true" data-dots-each="3">
-                    <a class="link-image" href="#"><img src="images/logo-image-1-174x113.png" alt="" width="174" height="113"/></a>
-                    <a class="link-image" href="#"><img src="images/logo-image-2-173x135.png" alt="" width="173" height="135"/></a>
-                    <a class="link-image" href="#"><img src="images/logo-image-3-172x113.png" alt="" width="172" height="113"/></a>
-                    <a class="link-image" href="#"><img src="images/logo-image-4-185x110.png" alt="" width="185" height="110"/></a>
+                <div class="owl-carousel owl-dots-secondary owl-layout-3" data-items="3" data-xs-items="2" data-sm-items="3" data-md-items="4" data-dots="true" data-nav="false" data-stage-padding="10" data-loop="true" data-margin="30" data-mouse-drag="true" data-dots-each="3" data-autoplay="true">
+                    <a class><img src="images/Logos-patrocinadores-01.png" alt="" width="174" height="113"/></a>
+                    <a class><img src="images/Logos-patrocinadores-02.png" alt="" width="174" height="113"/></a>
+                    <a class><img src="images/Logos-patrocinadores-03.png" alt="" width="174" height="113"/></a>
+                    <a class><img src="images/Logos-patrocinadores-04.png" alt="" width="174" height="113"/></a>
+                    <a class><img src="images/Logos-patrocinadores-05.png" alt="" width="174" height="113"/></a>
+                    <a class><img src="images/Logos-patrocinadores-06.png" alt="" width="174" height="113"/></a>
+                    <a class><img src="images/Logos-patrocinadores-07.png" alt="" width="130" height="86"/></a>
+                    <a class><img src="images/Logos-patrocinadores-08.png" alt="" width="130" height="86"/></a>
+                    <a class><img src="images/Logos-patrocinadores-09.png" alt="" width="174" height="113"/></a>
                 </div>
             </div>
+            
         </section>
 
       <!-- Page Footer-->
-      <footer class="section page-footer page-footer-alternative bg-gray-darker">
+      <footer class="section page-footer page-footer-alternative bg-black">
         <div class="shell-wide">
           <div class="range range-50 range-xs-center range-lg-justify">
             <div class="cell-sm-6 cell-lg-3">
-              <h6>Twitter feed</h6>
+              <h6 class="white">Facebook feed</h6>
               <div class="twitter" data-twitter-username="templatemonster">
                 <div class="twitter-feed-minimal" data-twitter-type="tweet">
                   <div class="unit unit-xs-horizontal">
@@ -128,49 +171,9 @@
               </div>
             </div>
             <div class="cell-sm-6 cell-lg-3">
-              <h6>Instagram feed</h6>
+              <h6 class="white">Instagram feed</h6>
               <div class="instafeed text-center" data-instafeed-user="25025320" data-instafeed-get="user" data-instafeed-sort="least-recent" data-lightgallery="group">
                 <div class="range range-10 range-narrow">
-                  <div class="cell-xxs-4" data-instafeed-item="">
-                    <div class="thumbnail-instafeed thumbnail-instafeed-minimal"> <a class="instagram-link" data-lightgallery="group-item" href="#" data-images-standard_resolution-url="href"><img class="instagram-image" src="images/_blank.png" alt="" data-images-standard_resolution-url="src"/></a>
-                      <div class="caption"> 
-                        <ul class="list-inline">
-                          <li><span class="icon mdi mdi-heart"></span><span data-likes-count="text"></span></li>
-                          <li><span class="icon mdi mdi-comment"></span><span data-comments-count="text"></span></li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="cell-xxs-4" data-instafeed-item="">
-                    <div class="thumbnail-instafeed thumbnail-instafeed-minimal"> <a class="instagram-link" data-lightgallery="group-item" href="#" data-images-standard_resolution-url="href"><img class="instagram-image" src="images/_blank.png" alt="" data-images-standard_resolution-url="src"/></a>
-                      <div class="caption"> 
-                        <ul class="list-inline">
-                          <li><span class="icon mdi mdi-heart"></span><span data-likes-count="text"></span></li>
-                          <li><span class="icon mdi mdi-comment"></span><span data-comments-count="text"></span></li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="cell-xxs-4" data-instafeed-item="">
-                    <div class="thumbnail-instafeed thumbnail-instafeed-minimal"> <a class="instagram-link" data-lightgallery="group-item" href="#" data-images-standard_resolution-url="href"><img class="instagram-image" src="images/_blank.png" alt="" data-images-standard_resolution-url="src"/></a>
-                      <div class="caption"> 
-                        <ul class="list-inline">
-                          <li><span class="icon mdi mdi-heart"></span><span data-likes-count="text"></span></li>
-                          <li><span class="icon mdi mdi-comment"></span><span data-comments-count="text"></span></li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="cell-xxs-4" data-instafeed-item="">
-                    <div class="thumbnail-instafeed thumbnail-instafeed-minimal"> <a class="instagram-link" data-lightgallery="group-item" href="#" data-images-standard_resolution-url="href"><img class="instagram-image" src="images/_blank.png" alt="" data-images-standard_resolution-url="src"/></a>
-                      <div class="caption"> 
-                        <ul class="list-inline">
-                          <li><span class="icon mdi mdi-heart"></span><span data-likes-count="text"></span></li>
-                          <li><span class="icon mdi mdi-comment"></span><span data-comments-count="text"></span></li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
                   <div class="cell-xxs-4" data-instafeed-item="">
                     <div class="thumbnail-instafeed thumbnail-instafeed-minimal"> <a class="instagram-link" data-lightgallery="group-item" href="#" data-images-standard_resolution-url="href"><img class="instagram-image" src="images/_blank.png" alt="" data-images-standard_resolution-url="src"/></a>
                       <div class="caption"> 
@@ -194,20 +197,20 @@
                 </div>
               </div>
             </div>
-            <div class="cell-sm-6 cell-lg-3">
-              <h6>Contacto</h6>
+            <div class="cell-sm-6 cell-lg-3 bg-purple">
+              <h6 class="white">Contacto</h6>
               <ul class="list-xs list-darker">
                 <li class="box-inline"><span class="icon icon-md-smaller icon-primary mdi mdi-map-marker"></span>
-                  <div><a href="#">2130 Fulton Street, Chicago,<br class="veil reveal-xl-block"/>&nbsp;
-                      IL 94117-1080 USA</a></div>
+                  <div><p class="white">2130 Fulton Street, Chicago,<br class="veil reveal-xl-block"/>&nbsp;
+                      IL 94117-1080 USA</p></div>
                 </li>
                 <li class="box-inline"><span class="icon icon-md-smaller icon-primary mdi mdi-phone"></span>
                   <ul class="list-comma">
-                    <li><a href="callto:#">1-800-1234-567</a></li>
-                    <li><a href="callto:#">1-800-6780-345</a></li>
+                    <li><p href="callto:#" class="white">1-800-1234-567</p></li>
+                    <li><p href="callto:#" class="white">1-800-6780-345</p></li>
                   </ul>
                 </li>
-                <li class="box-inline"><span class="icon icon-md-smaller icon-primary mdi mdi-email-open"></span><a href="mailto:#">mail@demolink.org</a></li>
+                <li class="box-inline"><span class="icon icon-md-smaller icon-primary mdi mdi-email-open"></span><p class="white">mail@demolink.org</p></li>
               </ul>
               <ul class="page-footer-icon-list social-icons-list">
                 <li><a class="icon icon-sm-bigger icon-gray-light mdi mdi-facebook" href="#"></a></li>
@@ -216,20 +219,6 @@
                 <li><a class="icon icon-sm-bigger icon-gray-light mdi mdi-google" href="#"></a></li>
                 <li><a class="icon icon-sm-bigger icon-gray-light mdi mdi-linkedin" href="#"></a></li>
               </ul>
-            </div>
-            <div class="cell-sm-6 cell-lg-3">
-              <h6>Newsletter</h6>
-              <p class="text-spacing-sm">Keep up with our always upcoming product features and technologies. Enter your e-mail and subscribe to our newsletter.</p>
-              <!-- RD Mailform: Subscribe-->
-              <form class="rd-mailform rd-mailform-inline rd-mailform-sm" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
-                <div class="rd-mailform-inline-inner">
-                  <div class="form-wrap">
-                    <input class="form-input" type="email" name="email" data-constraints="@Email @Required" id="subscribe-form-email-2"/>
-                    <label class="form-label" for="subscribe-form-email-2">Enter your e-mail</label>
-                  </div>
-                  <button class="button form-button button-sm button-secondary button-nina" type="submit">Subscribe</button>
-                </div>
-              </form>
             </div>
           </div>
         </div>
